--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.25",
+    "hamburger-react": "^2.5.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
